feat: add Kafka-based notification pipeline and service fixes